sfSandBoxCode/force-app/main/default/objects/Inventory_Location_Move__c/Inventory_Location_Move__c.object-meta.xml
<CustomObject>
    <label>Inventory Location Move</label>
    <nameField>
        <displayFormat>IMV-{0000}</displayFormat>
        <label>Inventory Location Move Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Location Moves</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>