sfSandBoxCode/force-app/main/default/objects/Inventory_Location_Move__c/fields/Batch_From__c.field-meta.xml
<CustomField>
    <fullName>Batch_From__c</fullName>
    <formula>Location_From__r.Batch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch From</label>
    <type>Text</type>
</CustomField>