sfSandBoxCode/force-app/main/default/objects/Inventory_Location_Move__c/fields/Batch_To__c.field-meta.xml
<CustomField>
    <fullName>Batch_To__c</fullName>
    <formula>Location_To__r.Batch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch To</label>
    <type>Text</type>
</CustomField>