sfSandBoxCode/force-app/main/default/objects/Inventory_Location_Move__c/fields/From_Count__c.field-meta.xml
<CustomField>
    <fullName>From_Count__c</fullName>
    <formula>Location_From__r.Location_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>