sfSandBoxCode/force-app/main/default/objects/Inventory_Location_Move__c/fields/From_Transaction__c.field-meta.xml
<CustomField>
    <fullName>From_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Transaction</label>
    <referenceTo>Inventory_Transaction__c</referenceTo>
    <relationshipLabel>Inventory Location Moves</relationshipLabel>
    <relationshipName>Inventory_Location_Moves</relationshipName>
    <type>Lookup</type>
</CustomField>