sfSandBoxCode/force-app/main/default/objects/Inventory_Location_Move__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inventory Item</label>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Inventory Location Moves</relationshipLabel>
    <relationshipName>Inventory_Location_Moves</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>