sfSandBoxCode/force-app/main/default/objects/Inventory_Location_Move__c/fields/Location_Lot_To__c.field-meta.xml
<CustomField>
    <fullName>Location_Lot_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>To Location Lot</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Item_Location_Lot__c.Item_Location__c</field>
            <operation>equals</operation>
            <valueField>$Source.Location_To__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Item_Location_Lot__c</referenceTo>
    <relationshipLabel>Inventory Location Moves (Location Lot To)</relationshipLabel>
    <relationshipName>Inventory_Location_Moves1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>