sfSandBoxCode/force-app/main/default/objects/Inventory_Location_Move__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Quantity in the transaction</description>
    <label>Quantity</label>
    <precision>13</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Number</type>
</CustomField>