sfSandBoxCode/force-app/main/default/objects/Inventory_Location_Move__c/fields/To_Transaction__c.field-meta.xml
<CustomField>
    <fullName>To_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Transaction</label>
    <referenceTo>Inventory_Transaction__c</referenceTo>
    <relationshipLabel>Inventory Location Moves (To Transaction)</relationshipLabel>
    <relationshipName>Inventory_Location_Moves1</relationshipName>
    <type>Lookup</type>
</CustomField>